[tool.poetry]
name = "nonebot_plugin_broker"
version = "0.4.0"
description = "a plugin for nonebot"
authors = ["mwbimh <mwbimh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
nonebot-plugin-apscheduler = "^0.1.2"
nonebot2 = "^2.0.0-beta.2"
nonebot-adapter-onebot = "^2.0.0-beta.1"
"ruamel.yaml" = "^0.17.21"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
